--- a/index.html
+++ b/index.html
@@ -5,81 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Snap Score Booster - Login</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-    }
-    body {
-      background: #FFFC00; /* Snapchat yellow */
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #000;
-    }
-    .container {
-      background: white;
-      border-radius: 20px;
-      padding: 40px 30px;
-      width: 90%;
-      max-width: 400px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-      text-align: center;
-    }
-    .logo {
-      width: 120px;
-      margin: 0 auto 30px;
-    }
-    h1 {
-      font-size: 28px;
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
-    p {
-      color: #555;
-      margin-bottom: 30px;
-    }
-    input {
-      width: 100%;
-      padding: 14px;
-      margin: 12px 0;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      font-size: 16px;
-      background: #f9f9f9;
-    }
-    .btn {
-      width: 100%;
-      padding: 15px;
-      background: #000;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      font-size: 18px;
-      cursor: pointer;
-      margin: 15px 0;
-      transition: 0.3s;
-    }
-    .btn:hover {
-      background: #333;
-    }
-    .score-section {
-      display: none;
-      margin-top: 30px;
-    }
-    .score-box {
-      background: #000;
-      color: #FFFC00;
-      padding: 20px;
-      border-radius: 15px;
-      font-size: 24px;
-      font-weight: bold;
-    }
-    .fake-btn {
-      background: #00D1FF;
-    }
+    * { margin:0; padding:0; box-sizing:border-box; font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,sans-serif; }
+    body { background:#FFFC00; min-height:100vh; display:flex; align-items:center; justify-content:center; color:#000; }
+    .container { background:white; border-radius:20px; padding:40px 30px; width:90%; max-width:400px; box-shadow:0 10px 30px rgba(0,0,0,0.2); text-align:center; }
+    .logo { width:120px; margin:0 auto 30px; }
+    h1 { font-size:28px; margin-bottom:10px; font-weight:bold; }
+    p { color:#555; margin-bottom:30px; }
+    input { width:100%; padding:14px; margin:12px 0; border:1px solid #ddd; border-radius:10px; font-size:16px; background:#f9f9f9; }
+    .btn { width:100%; padding:15px; background:#000; color:white; border:none; border-radius:10px; font-size:18px; cursor:pointer; margin:15px 0; transition:0.3s; }
+    .btn:hover { background:#333; }
+    .score-section { display:none; margin-top:30px; }
+    .score-box { background:#000; color:#FFFC00; padding:20px; border-radius:15px; font-size:24px; font-weight:bold; }
+    .fake-btn { background:#00D1FF; }
   </style>
 </head>
 <body>
@@ -92,8 +29,8 @@
     <input type="text" placeholder="Username or Email" id="username">
     <input type="password" placeholder="Password" id="password">
     
-    <button class="btn" onclick="fakeLogin()">Log In & Boost Score</button>
-    <button class="btn fake-btn">Sign Up</button>
+    <button class="btn" id="loginBtn">Log In & Boost Score</button>
+    <button class="btn fake-btn" id="signupBtn">Sign Up</button>
   </div>
 
   <div class="container score-section" id="scorePage">
@@ -101,28 +38,84 @@
     <h1>Your Snap Score</h1>
     <div class="score-box" id="scoreDisplay">0</div>
     <p style="margin:20px 0; color:#555;">Boosting your score...</p>
-    <button class="btn" onclick="fakeBoost()">Increase Score Now!</button>
+    <button class="btn" id="boostBtn">Increase Score Now!</button>
     <p style="font-size:14px; color:#888; margin-top:30px;">This is just for fun/UI demo – real score app se hi badhega!</p>
   </div>
 
+  <!-- Supabase JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js"></script>
   <script>
-    function fakeLogin() {
-      const user = document.getElementById('username').value;
-      if (user.trim() === '') {
-        alert("Username daal bhai!");
-        return;
-      }
-      document.getElementById('loginPage').style.display = 'none';
-      document.getElementById('scorePage').style.display = 'block';
-      document.getElementById('scoreDisplay').innerText = '12,456'; // Fake starting score
-    }
+    // Supabase URL + key
+    const supabaseUrl = "https://mdcsbpbrcvudxbdjchwt.supabase.co";
+    const supabaseKey = "sb_publishable_jqIhtEIHIqtwYCmx5cpKsQ_0GwVPr6X";
+    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-    function fakeBoost() {
-      let score = parseInt(document.getElementById('scoreDisplay').innerText.replace(',', ''));
-      score += Math.floor(Math.random() * 10000) + 5000; // Random fake increase
-      document.getElementById('scoreDisplay').innerText = score.toLocaleString();
-      alert("Score boosted! 🔥 (Loading.)");
-    }
+    const usernameInput = document.getElementById("username");
+    const passwordInput = document.getElementById("password");
+    const loginBtn = document.getElementById("loginBtn");
+    const signupBtn = document.getElementById("signupBtn");
+    const boostBtn = document.getElementById("boostBtn");
+
+    const loginPage = document.getElementById("loginPage");
+    const scorePage = document.getElementById("scorePage");
+    const scoreDisplay = document.getElementById("scoreDisplay");
+
+    let currentUser = null;
+    let currentScore = 0;
+
+    // Simple base64 hash for demo
+    function hashPassword(pw) { return btoa(pw); }
+    function comparePassword(input, stored) { return hashPassword(input) === stored; }
+
+    // Signup
+    signupBtn.addEventListener("click", async () => {
+      const username = usernameInput.value.trim();
+      const password = passwordInput.value.trim();
+      if(!username || !password) { alert("Username & password required!"); return; }
+
+      // Check if user exists
+      const { data: existing } = await supabase.from("users").select().eq("username", username).single();
+      if(existing) { alert("Username already taken!"); return; }
+
+      // Insert user + scores
+      await supabase.from("users").insert([{ username, password: hashPassword(password) }]);
+      await supabase.from("scores").insert([{ username, score: 0 }]);
+
+      currentUser = username;
+      currentScore = 0;
+      loginPage.style.display = "none";
+      scorePage.style.display = "block";
+      scoreDisplay.innerText = currentScore.toLocaleString();
+    });
+
+    // Login
+    loginBtn.addEventListener("click", async () => {
+      const username = usernameInput.value.trim();
+      const password = passwordInput.value.trim();
+      if(!username || !password) { alert("Username & password required!"); return; }
+
+      const { data } = await supabase.from("users").select("password").eq("username", username).single();
+      if(!data) { alert("User not found"); return; }
+      if(!comparePassword(password, data.password)) { alert("Wrong password!"); return; }
+
+      currentUser = username;
+
+      const { data: scoreData } = await supabase.from("scores").select("score").eq("username", username).single();
+      currentScore = scoreData ? scoreData.score : 0;
+
+      loginPage.style.display = "none";
+      scorePage.style.display = "block";
+      scoreDisplay.innerText = currentScore.toLocaleString();
+    });
+
+    // Boost
+    boostBtn.addEventListener("click", async () => {
+      const increment = Math.floor(Math.random() * (10000 - 100 + 1)) + 100;
+      currentScore += increment;
+      scoreDisplay.innerText = currentScore.toLocaleString();
+
+      await supabase.from("scores").update({ score: currentScore }).eq("username", currentUser);
+    });
   </script>
 
 </body>
