--- a/index.html
+++ b/index.html
@@ -1,77 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Snap Score Booster</title>
-<style>
-  * { margin:0; padding:0; box-sizing:border-box; font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto; }
-  body { background:#FFFC00; min-height:100vh; display:flex; align-items:center; justify-content:center; }
-  .container { background:white; border-radius:20px; padding:40px 30px; width:90%; max-width:400px; box-shadow:0 10px 30px rgba(0,0,0,0.2); text-align:center; }
-  .logo { width:120px; margin:0 auto 20px; }
-  h1 { font-size:26px; margin-bottom:10px; font-weight:bold; }
-  p { color:#555; margin-bottom:25px; }
-  input { width:100%; padding:14px; margin:12px 0; border:1px solid #ddd; border-radius:10px; font-size:16px; background:#f9f9f9; }
-  button { width:100%; padding:15px; background:#000; color:white; border:none; border-radius:10px; font-size:18px; cursor:pointer; margin-top:15px; }
-  button:hover { background:#333; }
-  .score-section { display:none; margin-top:30px; }
-  .score-box { background:#000; color:#FFFC00; padding:20px; border-radius:15px; font-size:24px; font-weight:bold; margin-bottom:20px; }
-  .note { font-size:12px; color:#888; margin-top:20px; }
-</style>
+  <title>Snap Score Booster</title>
 </head>
 <body>
 
-<div class="container" id="loginPage">
-  <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/c/c0/Snapchat_Logo.svg" alt="Snap Logo">
-  <h1>Snap Score Booster</h1>
-  <p>Login to increase your Snap Score fast!</p>
+<h2>Sign Up</h2>
+<input id="email" placeholder="Email"><br><br>
+<input id="password" placeholder="Password"><br><br>
+<input id="username" placeholder="Username"><br><br>
+<button onclick="signup()">Sign Up</button>
 
-  <input type="text" id="username" placeholder="Username">
-  <input type="password" id="password" placeholder="Password">
+<h2>Login</h2>
+<input id="loginEmail" placeholder="Email"><br><br>
+<input id="loginPassword" placeholder="Password"><br><br>
+<button onclick="login()">Login</button>
 
-  <button onclick="login()">Log In & Boost Score</button>
+<p id="msg"></p>
 
-  <p class="note">Demo project – for learning only</p>
+<div id="scoreSection" style="display:none;">
+  <h2>Your Snap Score</h2>
+  <p id="score">0</p>
+  <button onclick="boost()">Boost Score</button>
 </div>
 
-<div class="container score-section" id="scorePage">
-  <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/c/c0/Snapchat_Logo.svg" alt="Snap Logo">
-  <h1>Your Snap Score</h1>
-  <div class="score-box" id="scoreDisplay">0</div>
-  <button onclick="boostScore()">Increase Score Now!</button>
-  <p class="note">Saved in your browser only (localStorage)</p>
-</div>
-
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-function login() {
-  const user = document.getElementById("username").value.trim();
-  const pass = document.getElementById("password").value.trim();
+const supabaseUrl = "https://mdcsbpbrcvudxbdjchwt.supabase.co";
+const supabaseKey = "sb_publishable_jqIhtEIHIqtwYCmx5cpKsQ_0GwVPr6X";
+const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-  if(user === "" || pass === "") {
-    alert("Fill both fields!");
+let currentUser = null;
+
+// SIGNUP
+async function signup() {
+  const email = document.getElementById("email").value;
+  const password = document.getElementById("password").value;
+  const username = document.getElementById("username").value;
+
+  const { data, error } = await supabase.auth.signUp({
+    email,
+    password
+  });
+
+  if (error) {
+    document.getElementById("msg").innerText = error.message;
     return;
   }
 
-  // Save in localStorage
-  let users = JSON.parse(localStorage.getItem("users")) || [];
-  users.push({username: user, password: pass});
-  localStorage.setItem("users", JSON.stringify(users));
-  console.log("Saved users:", users);
+  await supabase.from("profiles").insert({
+    id: data.user.id,
+    username: username,
+    score: 0
+  });
 
-  // Show score page
-  document.getElementById('loginPage').style.display = 'none';
-  document.getElementById('scorePage').style.display = 'block';
-  
-  // Fake starting score
-  document.getElementById('scoreDisplay').innerText = '12,456';
+  document.getElementById("msg").innerText = "Signup successful!";
 }
 
-function boostScore() {
-  let scoreEl = document.getElementById('scoreDisplay');
-  let score = parseInt(scoreEl.innerText.replace(/,/g,''));
-  score += Math.floor(Math.random() * 10000) + 100; // random boost
-  scoreEl.innerText = score.toLocaleString();
-  alert("Score boosted! 🔥");
+// LOGIN
+async function login() {
+  const email = document.getElementById("loginEmail").value;
+  const password = document.getElementById("loginPassword").value;
+
+  const { data, error } = await supabase.auth.signInWithPassword({
+    email,
+    password
+  });
+
+  if (error) {
+    document.getElementById("msg").innerText = error.message;
+    return;
+  }
+
+  currentUser = data.user;
+
+  const { data: profile } = await supabase
+    .from("profiles")
+    .select("score")
+    .eq("id", currentUser.id)
+    .single();
+
+  document.getElementById("score").innerText = profile.score;
+  document.getElementById("scoreSection").style.display = "block";
+}
+
+// BOOST SCORE
+async function boost() {
+  let newScore = Math.floor(Math.random() * 10000) + 1000;
+
+  await supabase
+    .from("profiles")
+    .update({ score: newScore })
+    .eq("id", currentUser.id);
+
+  document.getElementById("score").innerText = newScore;
 }
 </script>
 
